--- a/src/components/assets/scss/Brand.scss
+++ b/src/components/assets/scss/Brand.scss
@@ -1,6 +1,6 @@
 .brand{
   a{
-    background-color: #f1f1f1;
+    background-color: #000000;
     box-shadow: 0 3px 3px -2px rgba(0,0,0,0.2),
                 0 3px 4px 0 rgba(0,0,0,0.14),
                 0 1px 8px 0 rgba(0,0,0,0.12);
@@ -15,7 +15,7 @@
   img{
     position: relative;
     margin: 0 2px;
-    transform: rotateX(180deg) translateY(-4px);
+    // transform: rotateX(180deg) translateY(-4px);
   }
 }
 @media only screen and (max-width: 350px) {
