--- a/src/components/Pages/css/Login.scss
+++ b/src/components/Pages/css/Login.scss
@@ -1,7 +1,6 @@
 #main {
   font-family: Consolas, sans-serif;
-  background: #794141;
-  background: linear-gradient(110deg, #eb4559 50%, #f78259 50%);
+  background: #ae2aae;
   height: 100vh;
   text-align: center;
   display: flex;
